--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		  <div class="container">
 		    <a class="navbar-brand" href="#">Ricomida</a>
+				<div class="text-end">
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
@@ -32,6 +33,7 @@
 		        </li>
 				  </ul>
 		    </div>
+			</div>
 		  </div>
 		</nav>
 
@@ -40,10 +42,10 @@
 	<div class="introduccion">
 		<div class="container">
   		<div class="row align-items-center">
-    		<div class="col">
+    		<div class="col-sm-6">
       	<img src="assets/img/principal.jpg" class="img-fluid">
     		</div>
-    		<div class="col">
+    		<div class="col-sm-6">
       	<h1>Pizza al estilo Chicago con espinacas y champiñones</h1>
 				<hr>
 				<h4>110 min / 6 a 8 porciones</h4>
@@ -55,12 +57,98 @@
 		</div>
 	</div>
 
-	<div class="carrusel">
+<div class="carrusel d-none d-md-block">
+	<div id="carruselfotos" class="carousel carousel-dark slide" data-bs-ride="carousel">
+
+	  	<div class="carousel-inner">
+	    <div class="carousel-item active" data-bs-interval="10000">
+					<div class="container">
+					<div class="row">
+
+					<div class="col"><img src="assets/img/slider-1.png" class="img-fluid"></div>
+					<div class="col"><img src="assets/img/slider-2.png" class="img-fluid"></div>
+					<div class="col"><img src="assets/img/slider-3.png" class="img-fluid"></div>
+					<div class="col"><img src="assets/img/slider-4.png" class="img-fluid"></div>
+
+					</div>
+					</div>
+
+	    </div>
+
+			<div class="carousel-item" data-bs-interval="10000">
+				<div class="container">
+				<div class="row">
+
+				<div class="col"><img src="assets/img/slider-5.png" class="img-fluid"></div>
+				<div class="col"><img src="assets/img/slider-6.png" class="img-fluid"></div>
+				<div class="col"><img src="assets/img/slider-7.png" class="img-fluid"></div>
+				<div class="col"><img src="assets/img/slider-8.png" class="img-fluid"></div>
+
+				</div>
+				</div>
+	  	</div>
+
+
+		 </div>
+		 <div class="carousel-indicators">
+		 <button type="button" data-bs-target="#carruselfotos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+		 <button type="button" data-bs-target="#carruselfotos" data-bs-slide-to="1" aria-label="Slide 2"></button>
+	 	 </div>
+	</div>
+</div>
+
+
+			<hr>
+
+	<div class="receta">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+				<h4>Ingredientes</h4>
+				<p>Masa</p>
+				<p>20 gr de levadura seca instantánea<br>
+				1 cucharadita de azúcar<br>
+				500 ml agua tibia<br>
+				100 ml aceite vegetal<br>
+				4 cucharadas de aceite de oliva<br>
+				65 gr harina de maíz fina (chuchoca)<br>
+				2 cucharaditas de sal<br>
+				625 gr harina</p>
+
+				<p>Salsa</p>
+				<p>5 cucharadas de aceite de oliva<br>
+				½  cebolla picada en cubos finos<br>
+				2 cucharaditas de sal<br>
+				3  cucharadas de Orégano Gourmet<br>
+				1 ½ cucharadas de Albahaca Gourmet<br>
+				2 tarro de tomates en cubos al natural<br>
+				2 cucharaditas de azúcar</p>
+
+				<p>Relleno</p>
+				<p>½  cebolla, en cubos</p>
+				</div>
+				<div class="col-sm-6">
+				<h4>Preparación</h4>
+				<ol>
+				<li>Para la masa, disolver la levadura y el azúcar en agua tibia en un bol grande. Dejar reposar 2 minutos. Agregar el aceite, la harian de maíz, sal y 400gr de harina. Mezclar bien. Amasar y agregar el resto de harina, la cantidad necesaria para tener una masa blanda. Poner en el mesón y amasar por 5 minutos o hasta tener una masa lisa y elástica (agregar harina en el mesón a medida que se va amasando para que la masa no se pegue). Poner la masa en un bol aceitado, tapar con un paño de cocina limpio y dejar reposar hasta que la masa duplique de volumen (leudar). Golpear la masa para que baje y luego dejar leudar por 40 minutos adicionales.</li>
+				<li>Mientras tanto preparar la salsa: Calentar 4 cucharadas de aceite en una olla a fuego medio. Agregar la cebolla, Orégano Gourmet, Albahaca Gourmet, sal y cocinar hasta que la cebolla esté dorada. Agregar el ajo y cocinar por 30 segundos. Agregar los tomates junto al jugo del tarro, a la mezcla de cebolla. Agregar el azúcar  y cocinar hasta que la mezcla se haya reducido y espesado, como 30 minutos.  Sazonar con sal y pimienta a gusto. Reservar.</li>
+				<li>Relleno: Cocinar las chalotas en el aceite de oliva hasta que estén transparentes. Agregar los champiñones y las espinacas, cocinar hasta que estén cocidos y se haya evaporado todo el líquido que hayan votado los vegetales. Reservar</li>
+				<li>Calentar el horno a 220C.</li>
+				<lI>Una vez que la masa haya reposado, dividirla en dos bolas. Estirar cada masa para cubrir dos moldes (desmontables) de 26 cm, hacer un borde de 5 cm con la masa. Dividir el relleno entre las dos pizza, tapar con el queso mozarella, luego terminar con la salsa de tomates y finalmente espolvorear el queso rallado.</li>
+				<li>Hornear por 35 a 40 minutos o hasta que el relleno esté caliente y la base esté esponjosa y dorada. Esperar unos minutos antes de desmoldar.</li>
+				</ol>
+
+				</div>
+			</div>
+		</div>
+
 	</div>
 
-
-
 	<div class="recetas-rel">
+	</div>
+
+	<div class="suscripcion"<
 	</div>
 
 	<footer>
