--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 	<script src="assets/js/bootstrap.bundle.min.js"></script>
 	<link href="assets/css/style.css" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	</head>
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		  <div class="container">
-		    <a class="navbar-brand" href="#">Ricomida</a>
+		    <a class="navbar-brand ricomida" href="#" style="font-size: 2rem;">Ricomida</a>
 				<div class="text-end">
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
@@ -97,8 +100,13 @@
 	</div>
 </div>
 
-
-			<hr>
+<div class="separador">
+	<div class="container">
+		<div class="row">
+		<div class="col"><hr></div>
+		</div>
+	</div>
+</div>
 
 	<div class="receta">
 
@@ -145,13 +153,27 @@
 
 	</div>
 
-	<div class="recetas-rel">
+	<div class="separador">
+		<div class="container">
+			<div class="row">
+			<div class="col"><hr></div>
+			</div>
+		</div>
 	</div>
 
-	<div class="suscripcion"<
+	<div class="recetas-rel text-center">
+	<h1>Recetas relacionadas</h1>
+	</div>
+
+	<div class="suscripcion text-center bg-danger">
+		<h1>Suscríbete a nuestro newsletter</h1>
+		<h3>y obtén las mejores recetas que tenemos en <span class="ricomida">Ricomida</span></h3>
 	</div>
 
 	<footer>
+		<div class="text-center piericomida bg-secondary">
+		<p>Ricomida</p>
+		</div>
 	</footer>
 </body>
 </html>
