más cambios a ricomida

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
-				<h4>Ingredientes</h4>
+				<h5>Ingredientes</h5>
 				<p>Masa</p>
 				<p>20 gr de levadura seca instantánea<br>
 				1 cucharadita de azúcar<br>
@@ -137,7 +137,8 @@
 				<p>½  cebolla, en cubos</p>
 				</div>
 				<div class="col-sm-6">
-				<h4>Preparación</h4>
+				<h5>Preparación</h5>
+				<p>&nbsp;</p>
 				<ol>
 				<li>Para la masa, disolver la levadura y el azúcar en agua tibia en un bol grande. Dejar reposar 2 minutos. Agregar el aceite, la harian de maíz, sal y 400gr de harina. Mezclar bien. Amasar y agregar el resto de harina, la cantidad necesaria para tener una masa blanda. Poner en el mesón y amasar por 5 minutos o hasta tener una masa lisa y elástica (agregar harina en el mesón a medida que se va amasando para que la masa no se pegue). Poner la masa en un bol aceitado, tapar con un paño de cocina limpio y dejar reposar hasta que la masa duplique de volumen (leudar). Golpear la masa para que baje y luego dejar leudar por 40 minutos adicionales.</li>
 				<li>Mientras tanto preparar la salsa: Calentar 4 cucharadas de aceite en una olla a fuego medio. Agregar la cebolla, Orégano Gourmet, Albahaca Gourmet, sal y cocinar hasta que la cebolla esté dorada. Agregar el ajo y cocinar por 30 segundos. Agregar los tomates junto al jugo del tarro, a la mezcla de cebolla. Agregar el azúcar  y cocinar hasta que la mezcla se haya reducido y espesado, como 30 minutos.  Sazonar con sal y pimienta a gusto. Reservar.</li>
@@ -161,13 +162,48 @@
 		</div>
 	</div>
 
-	<div class="recetas-rel text-center">
-	<h1>Recetas relacionadas</h1>
+<div class="recetas-rel text-center">
+
+	<h1 class="cabecerarecetas">Recetas relacionadas</h1>
+
+	<div class="container text-start">
+	<div class="row row-cols-1 row-cols-md-3">
+  <div class="col">
+    <div class="card tarjeta">
+      <img src="assets/img/recipe-card-1.png" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Panqueques con manjar y crema</h5>
+				<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card tarjeta">
+      <img src="assets/img/recipe-card-2.png" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Tiramisú</h5>
+				<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+		<div class="card tarjeta">
+      <img src="assets/img/recipe-card-3.png" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Plateada</h5>
+				<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+  </div>
 	</div>
+	</div>
+
+</div>
 
 	<div class="suscripcion text-center bg-danger">
 		<h1>Suscríbete a nuestro newsletter</h1>
 		<h3>y obtén las mejores recetas que tenemos en <span class="ricomida">Ricomida</span></h3>
+		<button type="button" class="btn btn-outline-light empezar">Empezar</button>
 	</div>
 
 	<footer>
