Actualización de ricomida

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ricomida</title>
+	<title>Ricomida Súpernet</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,7 @@
       	<h1>Pizza al estilo Chicago con espinacas y champiñones</h1>
 				<hr>
 				<h4>110 min / 6 a 8 porciones</h4>
-				<p><a href="#" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Presiona para enviar por correo">Enviar por correo</a> <a href="#" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Agregar esta receta a tus favoritos">Añadir a favoritos</a></p>		
+				<p><a href="#" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Presiona para enviar por correo">Enviar por correo</a> <a href="#" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Agregar esta receta a tus favoritos">Añadir a favoritos</a></p>
 				</div>
 
 				</div>
